// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`solves complex tree 1`] = `
Array [
  Object {
    "dependencies": Array [
      Object {
        "defaultFeatures": true,
        "features": Array [],
        "name": "d",
        "version": "^2",
      },
    ],
    "features": Array [],
    "id": "a@1.2.0",
    "name": "a",
    "source": "registry+<url>#<none>",
    "version": "1.2.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "defaultFeatures": true,
        "features": Array [],
        "name": "c",
        "version": "^0.1.5",
      },
    ],
    "features": Array [],
    "id": "b@1.1.0",
    "name": "b",
    "source": "registry+<url>#<none>",
    "version": "1.1.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "defaultFeatures": true,
        "features": Array [],
        "name": "f",
        "version": "^2",
      },
    ],
    "features": Array [],
    "id": "d@2.0.0",
    "name": "d",
    "source": "registry+<url>#<none>",
    "version": "2.0.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "defaultFeatures": true,
        "features": Array [],
        "name": "g",
        "version": "^1",
      },
    ],
    "features": Array [],
    "id": "f@2.0.0",
    "name": "f",
    "source": "registry+<url>#<none>",
    "version": "2.0.0",
  },
  Object {
    "dependencies": Array [],
    "features": Array [],
    "id": "g@1.0.0",
    "name": "g",
    "source": "registry+<url>#<none>",
    "version": "1.0.0",
  },
  Object {
    "dependencies": Array [],
    "features": Array [],
    "id": "c@0.1.6",
    "name": "c",
    "source": "registry+<url>#<none>",
    "version": "0.1.6",
  },
]
`;

exports[`solves needs-sat tree 1`] = `
Array [
  Object {
    "dependencies": Array [
      Object {
        "defaultFeatures": true,
        "features": Array [],
        "name": "d",
        "version": "^1.2.0",
      },
    ],
    "features": Array [],
    "id": "a@1.1.0",
    "name": "a",
    "source": "registry+<url>#<none>",
    "version": "1.1.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "defaultFeatures": true,
        "features": Array [],
        "name": "c",
        "version": "^0.1.0",
      },
    ],
    "features": Array [],
    "id": "b@1.0.0",
    "name": "b",
    "source": "registry+<url>#<none>",
    "version": "1.0.0",
  },
  Object {
    "dependencies": Array [],
    "features": Array [],
    "id": "c@0.1.0",
    "name": "c",
    "source": "registry+<url>#<none>",
    "version": "0.1.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "defaultFeatures": true,
        "features": Array [],
        "name": "f",
        "version": "^1",
      },
    ],
    "features": Array [],
    "id": "d@1.2.0",
    "name": "d",
    "source": "registry+<url>#<none>",
    "version": "1.2.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "defaultFeatures": true,
        "features": Array [],
        "name": "g",
        "version": "^1",
      },
    ],
    "features": Array [],
    "id": "f@1.0.0",
    "name": "f",
    "source": "registry+<url>#<none>",
    "version": "1.0.0",
  },
  Object {
    "dependencies": Array [],
    "features": Array [],
    "id": "g@1.0.0",
    "name": "g",
    "source": "registry+<url>#<none>",
    "version": "1.0.0",
  },
]
`;

exports[`solves simple tree 1`] = `
Array [
  Object {
    "dependencies": Array [
      Object {
        "defaultFeatures": true,
        "features": Array [],
        "name": "d",
        "version": "^2",
      },
    ],
    "features": Array [],
    "id": "a@1.2.0",
    "name": "a",
    "source": "registry+<url>#<none>",
    "version": "1.2.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "defaultFeatures": true,
        "features": Array [],
        "name": "f",
        "version": "^2",
      },
    ],
    "features": Array [],
    "id": "d@2.0.0",
    "name": "d",
    "source": "registry+<url>#<none>",
    "version": "2.0.0",
  },
  Object {
    "dependencies": Array [
      Object {
        "defaultFeatures": true,
        "features": Array [],
        "name": "g",
        "version": "^1",
      },
    ],
    "features": Array [],
    "id": "f@2.0.0",
    "name": "f",
    "source": "registry+<url>#<none>",
    "version": "2.0.0",
  },
  Object {
    "dependencies": Array [],
    "features": Array [],
    "id": "g@1.0.0",
    "name": "g",
    "source": "registry+<url>#<none>",
    "version": "1.0.0",
  },
]
`;
